[tool.poetry]
name = "cosmos-monitor"
version = "0.1.0"
description = "monitor for cosmos-validators"
authors = ["Alexei Tyurin <leha2148@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
